<resources>
    <string name="app_name">QuakeApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">QuakeApp</string>
    <string name="nav_header_subtitle">Stay safe!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_earthquakes">Terremoti</string>
    <string name="navigation">Navigazione</string>
    <string name="other">Altro</string>
    <string name="menu_home">Home</string>
    <string name="menu_all_quakes">Tutti i terremoti</string>
    <string name="menu_latest">Terremoti recenti</string>
    <string name="menu_seismic_network">Reti sismiche</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_settings">Impostazioni</string>
    <string name="menu_bugs">Segnala un problema</string>
    <string name="share">CONDIVDI</string>
    <string name="share_with">Condividi con</string>
    <string name="share_message">Fai sapere ai tuoi amici che stai bene!</string>
    <string name="bug_text">Mandaci un messaggio in cui riporti il problema che hai riscontrato:</string>
    <string name="bug_edit_text">Inserisci qui il testo</string>
    <string name="bug_mail">Il messaggio verra\' inviato a prova@mail.lol\nGrazie per la segnalazione!</string>
    <string name="bug_send">INVIA</string>
    <string name="load">Caricamento</string>
    <string name="loading_earthquakes">Sto caricando i terremoti</string>
    <string name="date">Data</string>
    <string name="location">Posizione</string>
    <string name="richter_mag">Richter</string>
    <string name="mercalli_mag">Mercalli</string>
    <string name="settings">Impostazioni</string>
    <string name="preferences">Preferenza:</string>
    <string name="s_mercalli">Scala Mercalli</string>
    <string name="i_richter">Indice Richter</string>
    <string name="gps">Geolocalizzazione</string>
    <string name="notify">Notifiche</string>
    <string name="theme">Tema</string>
    <string name="lang">Lingua</string>
    <string name="home_second">Home Second</string>
    <string name="monday">Lunedì</string>
    <string name="tuesday">Martedì</string>
    <string name="wednesday">Mercoledì</string>
    <string name="thursday">Giovedì</string>
    <string name="friday">Venerdì</string>
    <string name="saturday">Sabato</string>
    <string name="sunday">Domenica</string>
    <string name="today">Oggi</string>
    <string name="toggle_question">Apri/Chiudi</string>
    <string name="epicenter_image">Immagine epicentro/ipocentro</string>
    <string name="question1">Quale associazione fornisce i <b>dati</b>?</string>
    <string name="answer1">I dati presenti nell\'applicazione sono forniti da <b>USGS</b>.
        Lo <b>United States Geological Survey (USGS)</b> è un\'agenzia scientifica del Governo degli USA.
        L\'USGS è un organismo operativo e di ricerca, privo di poteri legali (non ha responsabilità normative)
        che esegue ricerche sui fatti oggettivi relativi all\'ambiente.
        L\'USGS gestisce il <b>National Earthquake Information Center</b> con sede a Golden (Colorado),
        organismo in grado di individuare la posizione e la magnitudo dei terremoti di tutto il mondo.
        Il motto dell\'USGS è <i>\"science for a changing world\"</i> (la scienza per un mondo in cambiamento).</string>
    <string name="question_Richter">Cosa colcola l\'indice <b>Richter</b>?</string>
    <string name="answer_Richter"><b>L\'indice Richter fornisce una valutazione obiettiva (magnitudo)
        della quantità di energia liberata.</b> \n
        Per calcolare la magnitudo si usa l\'indice Richter che non si misura in gradi,
        ma rappresenta delle grandezze, corrispondenti all\'ampiezza delle onde sismiche
        che un terremoto sprigiona al suo epicentro, elevate su base logaritmica.
        Lo zero della scala equivale ad una energia liberata pari a 105 Joule.
        Il massimo valore registrato, è stato di magnitudo 8.6 equivalente all\'energia di 1018 J.
        \n\n<b><![CDATA[<3.5]]></b>: Generalmente non sentita, ma registrata. \n\n<b>3.5-5.4</b>: Spesso sentita,
        ma raramente causa dei danni. \n\n<b>sotto 6.0</b>: Al massimo lievi danni a solidi edifici.
        \n\n<b>6.1-6.9</b>: Può arrivare ad essere distruttiva in aree di quasi 100 km, attraversando
        anche zone abitate. \n\n<b>7.0-7.9</b>: Terremoto maggiore. Causa seri danni su grandi aree.
        \n\n<b><![CDATA[>=8]]></b>: Grande terremoto. Può causare seri danni su vaste aree di svariate centinaia km.</string>
    <string name="question_Mercalli">Cosa calcola la scala <b>Mercalli</b>?</string>
    <string name="answer_Mercalli">La scala Mercalli non è una grandezza ma una scala lineare che
        valuta in gradi gli effetti distruttivi del sisma, da un minimo di zero, pari a nessun
        effetto su popolazione, cose ed edifici, a un massimo di 12 gradi, pari alla distruzione totale.
        La scala Mercalli dunque è un indice empirico, che, ad esempio, non si può calcolare in
        un luogo desertico o disabitato, dove non c\'è niente da distruggere.
        Essa <b>rappresenta l\'intensità con cui un terremoto si manifesta, in base alla sua capacità distruttiva.</b>
        \n\n<b>I</b>: Strumentale \n<b>II</b>: Leggerissima \n<b>III</b>: Leggera \n<b>IV</b>: Mediocre \n<b>V</b>: Forte
        \n<b>VI</b>: Molto forte \n<b>VII</b>: Fortissima \n<b>VIII</b>: Rovinosa \n<b>IX</b>: Disastrosa
        \n<b>X</b>: Disastrosissima \n<b>XI</b>: Catastrofica \n<b>XII</b>: Grande catastrofe</string>
    <string name="question4">Qual è la corrispondenza tra scala <b>Mercalli</b> e indice <b>Richter</b>?</string>
    <string name="minore"><![CDATA[<3.5]]></string>
    <string name="maggiore"><![CDATA[>8.1]]></string>
    <string name="grado_mercalli"><b>Grado Mercalli</b></string>
    <string name="magnitudo_richter"><b>Magnitudo Richter</b></string>
    <string name="question5">Qual è la differenza tra <b>epicentro</b> e <b>ipocentro</b>?</string>
    <string name="answer5"><b>L\’ipocentro</b> è il punto, situato in profondità all\’interno della Terra,
        in cui avviene la rottura della faglia che genera il terremoto.
        E\’ il punto da cui partono, in ogni direzione, le onde sismiche responsabili di quella
        che chiamiamo “scossa sismica”.\n
        <b>L\’epicentro</b> è invece il punto della superficie terrestre situato sulla verticale
        dell\’ipocentro. Se dall\’ipocentro si tracciasse una linea verticale, questa incontrerebbe
        la superficie in quello che noi chiamiamo epicentro.</string>
    <string name="question6">Come aggiungo un Paese alla sezione <b>aree di interesse</b>?</string>
    <string name="answer6">Per <b>aggiungere</b> un Paese alle proprie <i>Aree di interesse</i> bisogna cliccare
        sul pulsante \'<b>+</b>\' accanto alla scritta \"<i>Aree di interesse</i>\" all\'interno della Home; a questo
        punto si aprirà una pagina che permetterà la ricerca del Paese da <b>aggiungere</b> desiderato.</string>
    <string name="question7">Come faccio a rimuovere un Paese dalla sezione <b>aree di interesse</b>?</string>
    <string name="answer7">Per <b>rimuovere</b> un Paese dalla sezione riguardante le proprie <i>Aree di interesse</i>
    bisogna cliccare sull\'icona a forma di cestino accanto al Paese che si vuole <b>eliminare</b> direttamente
        dalla Home; in alternativa, è possibile cliccare sul pulsante \'<b>+</b>\' accanto alla scritta \"<i>Aree di interesse</i>\"
    sempre all\'interno della Home; a questo punto si può <b>cancellare</b> dalla propria <i>Aree di interesse</i>
    il Paese desiderato semplicemente selezionando l\'icona a forma di cestino che compare in corrispondenza
        del Paese in questione.</string>
    <string name="question8">Cosa indicano gli stati <b>sicuro</b>, <b>allerta</b> e <b>emergenza</b>?</string>
    <string name="answer8"><b>Sicuro:</b> non ci sono terremoti recenti nella zona.\n
        <b>Allerta:</b> ci sono stati terremoti recentemente, e ci possono essere scosse di assestamento.\n
        <b>Emergenza:</b> si è appena verificato un terremoto.</string>
    <string name="bs_epicenter">Epicentro</string>
    <string name="bs_hypocenter">Ipocentro</string>
    <string name="bs_magnitude">Magnitudo</string>
    <string name="bs_news">Notizie</string>
    <string name="news_one"><a href="http://www.google.com">Google</a></string>
    <string name="news_two"><a href="http://www.corriere.it">Corriere della Sera</a></string>
    <string name="news_three"><a href="http://www.cnn.com">CNN News</a></string>
    <string name="more_about"><u>Scopri di più su questo terremoto!</u></string>
    <string name="richter"><b> indice Richter</b></string>
    <string name="mercalli"><b> scala Mercalli</b></string>
    <string name="from_surface"><b> dalla superficie</b></string>
    <string name="home_latest">Recenti</string>
    <string name="home_today">oggi</string>
    <string name="home_tremors">scosse</string>
    <string name="home_this_week">ultimi 7 giorni</string>
    <string name="home_more_about">Scopri di più</string>
    <string name="home_safety_measures">Misure di sicurezza</string>
    <string name="home_behaviors">Comportamenti da adottare\nin caso di terremoto</string>
    <string name="home_view">Visualizza</string>
    <string name="home_areas_of_interest">Aree di interesse</string>
    <string name="home_safe">SICURO</string>
    <string name="home_critic">ALLERTA</string>
    <string name="home_emergency">EMERGENZA</string>
    <string name="fragent_earthquake_list_filtri">Filtri</string>
    <string name="safe">SICURO</string>
    <string name="alert">ALLERTA</string>
    <string name="emergency">EMERGENZA</string>
    <string name="home_recent_list_view">Recenti</string>
    <string name="visualizza_tutti">Visualizza tutti</string>
    <string name="message">"Ciao, volevo farti sapere che sto bene."</string>
    <string name="loading_seismic_networks">Sto caricando le reti sismiche</string>
    <string name="fragment_seismic_network_list_filtri">Filtri</string>
    <string name="sn_doi">DOI</string>
    <string name="sn_fdsn_code">FDSN_CODE</string>
    <string name="sn_fdsn_code_inline">FDSN: %s</string>
    <string name="sn_empty_doi">DOI non disponibile</string>
    <string name="num_seismic_networks">%s reti sismiche</string>
    <string name="sn_search_hint">Cerca...</string>
    <string name="loading_seismic_network">Sto caricando i dati della rete</string>
    <string name="snd_title_default">Nome rete sismica</string>
    <string name="snd_start_date">data inizio:</string>
    <string name="snd_start_date_default">01/01/2000</string>
    <string name="snd_end_date">data fine:</string>
    <string name="snd_end_date_default">01/01/2000</string>
    <string name="snd_end_date_empty">---</string>
    <string name="snd_seismographs">Sismografi</string>
    <string name="snd_seismographs_empty">Non ci sono informazioni riguardo i sismografi di questa rete…</string>
    <string name="sndi_identify">Identifica</string>
    <string name="sndi_latitude">Latitudine:</string>
    <string name="sndi_latitude_default">0.0</string>
    <string name="sndi_longitude">Longitudine:</string>
    <string name="sndi_longitude_default">0.0</string>
    <string name="sndi_elevation">Altitudine:</string>
    <string name="sndi_elevation_default">0.0</string>
    <string name="sndi_start_date">Data inizio:</string>
    <string name="sndi_start_date_default">01/01/2000</string>
    <string name="sndi_end_date">Data fine:</string>
    <string name="sndi_end_date_default">01/01/2000</string>
    <string name="sndi_end_date_empty">---</string>
    <string name="filtri">Filtri</string>
    <string name="m_richter">Magnitudo Richter</string>
    <string name="da_data">Da data</string>
</resources>