<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/navigation">
        <menu>
            <group
                android:id="@+id/nav_top"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_all_quakes"
                    android:title="@string/menu_all_quakes" />
                <item
                    android:id="@+id/nav_last"
                    android:title="@string/menu_last" />
                <item
                    android:id="@+id/nav_seismic_network"
                    android:title="@string/menu_seismic_network" />
            </group>
        </menu>
    </item>


    <item android:title="@string/other">
        <menu>
            <group
                android:id="@+id/nav_bottom"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_faq"
                    android:title="@string/menu_faq" />
                <item
                    android:id="@+id/nav_settings"
                    android:title="@string/menu_settings" />
                <item
                    android:id="@+id/nav_bugs"
                    android:title="@string/menu_bugs" />
            </group>
        </menu>
    </item>
</menu>
