<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SeismicNetworkList">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/snd_name"
                style="@style/Body1Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/num_seismic_networks"
                android:textAlignment="center" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/snd_start_date" />

                    <TextView
                        android:id="@+id/snd_start_date"
                        style="@style/Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snd_start_date_default" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/snd_end_date" />

                    <TextView
                        android:id="@+id/snd_end_date"
                        style="@style/Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snd_end_date_default" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/snd_seismographs_empty"
            style="@style/Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/snd_seismographs_empty"
            android:textAlignment="center"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/snd_map"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/primaryColor"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/snd_seismographs_title"
            style="@style/H6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/snd_seismographs" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/snd_pull_to_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/snd_seismographs_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null"
                android:dividerHeight="0dp" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>

</LinearLayout>