<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="32dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:paddingHorizontal="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/eqi_richter_container"
        android:layout_centerVertical="true"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/eqi_date"
            style="@style/Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <TextView
            android:id="@+id/eqi_location"
            style="@style/Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location" />
    </LinearLayout>

    <View
        android:id="@+id/eqi_richter_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/eqi_mercalli_container"
        style="@style/Tag">

        <TextView
            android:id="@+id/eqi_richter_mag"
            style="@style/Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/richter_mag" />
    </View>

    <View
        android:id="@+id/eqi_mercalli_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/eqi_chevron_right"
        style="@style/Tag">

        <TextView
            android:id="@+id/eqi_mercalli_mag"
            style="@style/Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mercalli_mag" />
    </View>

    <info.androidhive.fontawesome.FontTextView
        android:id="@+id/eqi_chevron_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:text="@string/fa_chevron_right_solid"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:solid_icon="true" />
</RelativeLayout>
